styles.css
@import url('https://fonts.googleapis.com/css2?family=Chivo&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Chivo:wght@300&display=swap');


  

body {
    background-color: #121725;
    font-family: 'Chivo', sans-serif;
    font-weight: 300;
    justify-content: center;

    position:fixed;
    top:0;
    bottom:0;
    left:0;
    right:0;
}
#bgmo {
    opacity: 0%;
}
#tablet{
    opacity: 0%;
}
.logo {
    padding: 40px;
    width: 888px;
    height: 640px;
    left: 552px;
    top: 130px;
}

/* Background */
.mainimage img{
    position: absolute;
    width: 888px;
    height: 640px;
    left: 552px;
    top: 80px;
}
.dots img {
    position: absolute;
    left: 75%;
    top: 90%;

}

/* End Background */

/* Content card */
#container {
    background-color: #121725;
    position: absolute;
    width: 723px;
    height: 509px;
    left: 165px;
    top: 212px;

    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}

h1{
    font-family: 'Chivo', sans-serif;
    font-weight: 300;
    color: #54E6AF;
    font-size: 52px;
    text-transform: uppercase;
    line-height: 62px;
}
span {
    color: white;
}
p {
    color: white;
    max-width: 445px;
    font-size: 18px;
    line-height: 28px;
    padding-bottom: 25px;
}
.container {
    display: inline;
}

/* Email Form */
form {
    border: none;
    display: block;
    
}
#email {
    padding-left: 20px;
    padding-right: 100px;
    border-radius: 50px;
}
#email:valid {
    background-color: #2C344B;
    color: white;
  }


input {
    background-color: #2C344B;
    border: none;
    padding: 10px;
    position: absolute;

    width: 277.5px;
    height: 34px;
    left: 30px;
    
}

input::placeholder {
    color: white;
    font-family: 'Chivo', sans-serif;
    opacity: 0.5;

}
input:focus::placeholder {
    color: transparent;
}



#error {
   color: rgb(250, 77, 77);
   position: absolute;
   font-family: 'Chivo', sans-serif;
   font-weight: 300;
   font-size: 14px;
   
    height: 100px;
    left: 45px;
    top: 70%;
    padding-top: 5px;
}

/* Solves the issue of white background when email is autofilled */
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active
{
 -webkit-box-shadow: 0 0 0 30px #2C344B inset !important;
}

/* Solves the issue of white background when email is autofilled */


/* Solves the issue of black text when email is autofilled */

input:-webkit-autofill
{
 -webkit-text-fill-color: white !important;
}

/* Solves the issue of black text when email is autofilled */


button {
    position: absolute;
    left: 36.2%;
    bottom: 27.2%;

    font-family: 'Chivo', sans-serif;
    font-weight: bold;
    width: 162px;
    height: 46px;
    border-radius: 30px;
    border: none;
    background-color: #54E6AF;
    color: #121725;
}
button:hover {
    background-color: #B3FFE2;
    cursor: pointer;
}

/* End Email Form */

.boxinfo {
    padding-left: 40px;
}
/* End Content card */


/* Podcasts */
.socials {
    display: inline;
    position: absolute;
    bottom: 0;
    padding-left: 5px;
}
.socials img {
    padding: 0 20px;
    padding-bottom: 16px;
}
/* End Podcasts */


/*-------------------------------------*/


/* Mobile Screen */

@media all
  and (max-device-width: 480px){
    
    p {
        text-align: center;
        font-family: 'chivo', sans-serif;
        font-weight: 100;
        justify-content: center;
        position: absolute;
        width: 327px;
        height: 100px;
        
    
        top: 110px;
        color: #C2CBE5;
        font-size: 15px;
        line-height: 25px;
    }
    h1{
        font-family: 'Chivo', sans-serif;
        font-weight: 300;
        color: #54E6AF;
        text-align: center;
        font-size: 26px;
        text-transform: uppercase;
        line-height: 38px;
        padding: 10px;

        width: 327px;
        height: 76px;
        /*left: 0px;*/
        top: 175px;
    }
    #container {
        background-color: transparent;
        position: absolute;
        justify-content: center;
        
        width: 200px;
        height: 509px;
        left: -20px;
        top: 110px;
        filter: none;
        
    }
    /* Podcasts */
    .socials {
        display: flex;
        position: relative;
        top: 27%;
        left: 40px;
    }
    .socials img {
        padding: 12px;
        width: 50px;
        height: fit-content;
    }
    .logo {
        position: absolute;
        justify-content: right;
        height: 56px;
        width: 134.8px;
        left: 120px;
        top: 25px;
        padding: 0;
        z-index: 1;
    }
    input {
        background-color: #2C344B;
        border: none;
        padding: 10px;
        position: absolute;
        justify-content: center;
        width: 200px;
        height: 27px;
        left: 40px;
        bottom: 115px;
    }
    button {
        position: absolute;
        left: 40px;
        bottom: 50px;
        width: 316px;
    }
    .dots img {
        opacity: 0%;
    }
    
    #overlay {
            position: fixed; /* Sit on top of the page content */
            width: 100%; /* Full width (cover the whole page) */
            height: 100%;
            background-color: #121725;
            opacity: 95%;
        } 
    #bgmo {
        background-image: url("image-host.jpg");
        opacity: 100%;
        width: 100%;
        height: 100%;
        z-index: 0; 
    }
    #error {
        color: rgb(250, 77, 77);
        position: absolute;
        font-family: 'Chivo', sans-serif;
        font-weight: 300;
        font-size: 14px;
        
         height: 100px;
         left: 1px;
         top: 73%;
         padding-top: 5px;
     }
 
}

/* --------------------------------- */

/* Tablet Screen */

@media all
  and (max-device-width: 768px) {
    #container {
        background-color: #121725;
        position: absolute;
        width: 723px;
        height: 509px;
        left: 0px;
        top: 212px;
    
        filter: none;
    }
  
    #tablet {
        opacity: 100%;
        position: absolute;
        bottom: 244px;
        left: 300px;
  }
    .dots img {
        left: 30px;
        top: 195px;

    }
    #bgmo {
        opacity: 0%;
    }

}

